created a placeholder with some minimal design

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <html>
 
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"/>
+	<link href="design.css" rel="stylesheet"/>
+	<script language="JavaScript" src="undephined.js"></script>
+	<script language="JavaScript" src="undephined.cms.js"></script>
 	<title>undephined</title>
 </head>
 
-<body>
-	<h1>It work's!</h1>
+<body onload="javascript:undephined.init();">
+	<div id="head" class="hidden">
+		<div>
+			<h1><em>un</em><em id="De">De</em><em id="Phi">Phi</em><em>ned</em></h1>
+			<h2>Dennis Philipps</h2>
+			<p>C++ Software Developer</p>
+		</div>
+	</div>
+	<div id="nav"></div>
+	<div id="content"></div>
 </body>
 
 </html>
